Agora o cubo está funcionando.

--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8)
 project(VolumeRendering)
-set(ITK_DIR "C:/itk_nova/ITK_build")
+set(ITK_DIR "C:/libs/itk/ITK_bin")
 find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
@@ -9,8 +9,8 @@ add_executable(vr ${my_source_files} )
 target_link_libraries(vr   ${ITK_LIBRARIES})
 find_package(OpenGL)
 target_link_libraries(vr ${OPENGL_LIBRARIES})
-include_directories(C:/libs/glew-2.0.0/include)
-target_link_libraries(vr C:/libs/glew-2.0.0/lib/Release/Win32/glew32.lib)
+include_directories(C:/libs/glew-2.1.0/include)
+target_link_libraries(vr C:/libs/glew-2.1.0/lib/Release/x64/glew32.lib)
 
 include_directories(C:/libs/glfw/include)
 target_link_libraries(vr debug C:/libs/glfw_bin/src/Debug/glfw3.lib)
@@ -18,7 +18,7 @@ target_link_libraries(vr optimized C:/libs/glfw_bin/src/Release/glfw3.lib)
 
 include_directories(C:/libs/glm)
 
-SET (EIGEN3_INCLUDE_DIR "C:/Program Files (x86)/Eigen3/include/eigen3")
+SET (EIGEN3_INCLUDE_DIR "C:/Program Files/Eigen3/include/eigen3")
 include_directories(${EIGEN3_INCLUDE_DIR})
 
 #suprime o warning chato dos infernos que a ITK gera por usar funções inseguras da api do windows
